Replace div 'location' with a form

--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
             <div class="doge-image"></div>
             <div id="all-weather">
                 <div id="weather-desc"></div>
-                <div id="location"></div>
+                <form id="location" method="post" action="">
+                    <input type="text" class="city" name="city" value="">
+                </form>
                 <div class="t" id="degreesCelsius"> <span class="number"></span><span class="cel"></span></div>
                 <div class="t" id="degreesFahrenheit"></div>
             </div>
